# xhos_rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
boot/: Cargo.toml
boot/src/: main.rs
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  serial.rs
kernel/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
runner/: Cargo.toml
runner/src/: main.rs
