cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[dependencies]
bootloader_api = "0.11.3"
noto-sans-mono-bitmap = "0.2.0"
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
volatile = "0.4.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
